--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@imagekit/react": "^5.0.1",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "lucide-react": "^0.522.0",
     "moment": "^2.30.1",
     "motion": "^12.16.0",
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8"
   },
